fix(stocks): 股票提醒第二轮问题修复F1阶段